--- a/styling-react-components/src/components/Header.module.css
+++ b/styling-react-components/src/components/Header.module.css
@@ -26,9 +26,9 @@ header h1 {
   margin: 0;
 }
 
-header p {
+.paragraph {
   text-align: center;
-  /* color: #a39191; */
+  color: #a39191;
   margin: 0;
 }
 
